<resources>
    <string name="app_name">Djinni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_user_full_name">Full Name</string>
    <string name="nav_user_status">online</string>
    <string name="nav_user_avatar">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_inbox">Inbox</string>
    <string name="inbox_offers">Offers</string>
    <string name="inbox_search">Name, company, email or LinkedIn</string>
    <string name="inbox_filter_all">All</string>
    <string name="inbox_filter_new">New</string>
    <string name="inbox_filter_active">Active</string>
    <string name="inbox_filter_favorites">Favorites</string>
    <string name="inbox_filter_archive">Archive</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_salaries">Salaries</string>
    <string name="account">Account</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_subs">Subs</string>
    <string name="tab_cv">CV</string>
    <string name="tab_stoplist">Stoplist</string>
    <string name="tab_hires">Hires</string>
    <string name="profile_menu">Account</string>
    <string name="profile_search_active">Active search</string>
    <string name="profile_search_active_tip">Djinni shows you as an active candidate to all recruiters and sends you a message to every contact</string>
    <string name="profile_search_passive">Passive search</string>
    <string name="profile_search_passive_tip">Passive search is currently only available to candidates with 2+ years of experience</string>
    <string name="profile_search_off">Not looking</string>
    <string name="profile_search_off_tip">Djinni doesn\'t show you as an active candidate, recruiters can\'t write to you</string>
    <string name="profile_view_your_profile">View your public profile</string>
    <string name="profile_raise_your_profile">Raise your profile in the search</string>
    <string name="profile_position">Position</string>
    <string name="profile_category">Category</string>
    <string-array name="profile_categories">
        <item>Android</item>
        <item>Artist</item>
        <item>C++</item>
        <item>Data Analyst</item>
        <item>Data Engineer</item>
        <item>Data Science</item>
        <item>Delivery Manager</item>
        <item>Design</item>
        <item>DevOps</item>
        <item>ERP</item>
        <item>Flutter</item>
        <item>Fullstack</item>
        <item>Golang</item>
        <item>Head Chief</item>
        <item>HR</item>
        <item>iOS</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>Lead</item>
        <item>Lead Generation</item>
        <item>Marketing</item>
        <item>Node.js</item>
        <item>.NET</item>
        <item>PHP</item>
        <item>Product Manager</item>
        <item>Product Owner</item>
        <item>Project Manager</item>
        <item>Python</item>
        <item>QA</item>
        <item>QA Automation</item>
        <item>React Native</item>
        <item>Recruiter</item>
        <item>Ruby</item>
        <item>Rust</item>
        <item>Salesforce</item>
        <item>Scala</item>
        <item>Scrum Master</item>
        <item>Security</item>
        <item>SQL</item>
        <item>Support</item>
        <item>Technical Writing</item>
        <item>Unity</item>
        <item>Sysadmin</item>
        <item>Sales</item>
        <item>SEO</item>
        <item>Other</item>
    </string-array>
    <string name="profile_skills">Skills</string>
    <string name="profile_skills_hint">Additional keywords that will help recruiters find you when searching for candidates</string>
    <string name="profile_experience_seekbar">Experience</string>
    <string name="profile_experience_without">without experience</string>
    <string name="profile_experience_6_months">6 months</string>
    <string name="profile_experience_1_year">1 year</string>
    <string name="profile_experience_1_5_years">1.5 years</string>
    <string name="profile_experience_2_years">2 years</string>
    <string name="profile_experience_2_5_years">2.5 years</string>
    <string name="profile_experience_3_years">3 years</string>
    <string name="profile_experience_4_years">4 years</string>
    <string name="profile_experience_5_years">5 years</string>
    <string name="profile_experience_6_years">6 years</string>
    <string name="profile_experience_7_years">7 years</string>
    <string name="profile_experience_8_years">8 years</string>
    <string name="profile_experience_9_years">9 years</string>
    <string name="profile_experience_10_years">10 years</string>
    <string name="profile_experience_more_10_years">more than 10 years</string>
    <string name="profile_salary_expectations">Salary expectations</string>
    <string name="profile_salary_expectations_hint">Amount after tax</string>
    <string name="profile_country">Country of residence</string>
    <string name="account_description">Job search on Djinni is anonymous. \nOnly those to whom you open contacts will see your personal data.</string>
    <string name="account_full_name">First name and Last name</string>
    <string name="account_email">Email</string>
    <string name="account_skype">Skype</string>
    <string name="account_phone">Phone</string>
    <string name="account_telegram">Telegram</string>
    <string name="account_whatsapp">WhatsApp</string>
    <string name="account_linkedin">LinkedIn</string>
    <string name="account_github">GitHub</string>
    <string name="account_portfolio">Portfolio</string>
    <string name="account_cv">CV</string>
    <string name="account_save">Save</string>
    <string name="subs_vacancies">Vacancies according to my profile</string>
    <string name="subs_vacancies_tip">if the profile is online and there are no vacancies</string>
    <string name="subs_vacancies_email">To email: test@test.com</string>
    <string name="subs_vacancies_not_send">Do not send</string>
    <string name="subs_notifications">Notifications from employers and subscriptions to vacancies</string>
    <string name="subs_notifications_tip">if the profile is online and there are no vacancies</string>
    <string name="subs_notifications_email">To email: test@test.com</string>
    <string name="subs_notifications_telegram">in Telegram</string>
    <string name="subs_offers_recruiters">Automatic offers from recruiters</string>
    <string name="subs_offers_recruiters_tip">Recruiters can create jobs with automatic offers to candidates who match the job description</string>
    <string name="subs_receive_offers">I want to receive automatic offers</string>
    <string name="subs_disable_all">Disable all subscriptions from Djinni</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_sign_up">Sign Up</string>
</resources>