<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.profile.screens.SubscriptionsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subs_vacancies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/subs_vacancies"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subs_vacancies_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subs_vacancies_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subs_vacancies" />

    <RadioGroup
        android:id="@+id/rg_subs_vacancies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subs_vacancies_tip">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_subs_vacancies_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs_vacancies_email" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_subs_vacancies_not_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs_vacancies_not_send" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subs_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/subs_notifications"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_subs_vacancies" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subs_notifications_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subs_notifications_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subs_notifications" />

    <RadioGroup
        android:id="@+id/rg_subs_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subs_notifications_tip">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_subs_notifications_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs_notifications_email" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_subs_notifications_telegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subs_notifications_telegram" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subs_offers_recruiters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/subs_offers_recruiters"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_subs_notifications" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subs_offers_recruiters_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subs_offers_recruiters_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subs_offers_recruiters" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chb_subs_receive_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subs_receive_offers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subs_offers_recruiters_tip" />

    <LinearLayout
        android:id="@+id/ll_subs_disable_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_subs_receive_offers"
        tools:ignore="UseCompoundDrawables">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_disable_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subs_disable_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/subs_disable_all"
            android:textColor="#FF0000" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>