<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.mkshmnv.djinni.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.mkshmnv.djinni.ui.inbox.InboxFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_jobs"
        android:name="com.mkshmnv.djinni.ui.jobs.JobsFragment"
        android:label="@string/menu_jobs"
        tools:layout="@layout/fragment_slideshow" />
</navigation>