<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:theme="@style/Theme.Djinni.Account"
    tools:context=".ui.profile.screens.AccountFragment">

    <!--    Contacts and CV -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_description" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_full_name_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_full_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_full_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_skype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_skype"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_skype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_skype" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_skype" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_telegram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_telegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_telegram" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_whatsapp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_telegram" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_whatsapp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_linkedin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_whatsapp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_linkedin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_github"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_linkedin" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_github" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_portfolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_portfolio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_github" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_portfolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_portfolio_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_portfolio" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_account_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/account_cv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_portfolio" />

        <!--        TODO download files  -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_cv_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_cv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_account_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/account_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account_cv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>