<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".ui.auth.screens.SignUpFragment">


    <com.mkshmnv.djinni.ui.CustomViewWithTitle
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        app:title="@string/auth_email">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_sign_in_email"
            style="@style/DefaultDjinniEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.mkshmnv.djinni.ui.CustomViewWithTitle>

    <com.mkshmnv.djinni.ui.CustomViewWithTitle
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginTop="15dp"
        app:title="@string/auth_password">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_sign_in_password"
            style="@style/DefaultDjinniEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.mkshmnv.djinni.ui.CustomViewWithTitle>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/auth_sign_up"
        android:textAllCaps="false" />

</LinearLayout>